--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,68 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1{
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
+
+.wrap_content{
+  width:100%;
+  min-height:50px;
+  overflow:hidden;
+  text-align:center;
+}
+
+.logo_2x{
+  width:116px;
+  height:38px;
+  margin:25px auto;
+}
+
+.login_h1{
+  font-family: 'Open Sans', arial;
+  height:50px;
+  color: #555;
+  padding-top:10px;
+  padding-bottom:10px;
+  font-size: 38px;
+}
+
+.login_h2{
+  font-family: 'Open Sans', arial;
+  font-size:18px;
+  color: #555;
+}
+
+.login_box{
+  width:354px;
+  height:361px;
+  margin:10px auto;
+  background-color:#f7f7f7;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.login_photo{
+  margin-top:40px;
+  border-radius: 50%;
+}
+
+.login_name{
+  font-size: 13px;
+  font-weight:bold;
+}
+
+.login_password_input{
+  width:274px;
+  height:44px;
+  border:1px solid #b9b9b9;
+}
+
+.login_password_input:hover{
+  border:1px solid black;
+  cursor:pointer;
+}
+
